Fix T91159: GPencil Smooth brush is using Affect Pressure but not used

The parameter wa sin the UI but was not used because it was replaced by Use Thickness.